--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body{
 
 }
 h2{
+    /* margin-top: 0.5rem; */
     text-align: center;
     font-size: 50px;
     font-family: "Ravi Prakash", system-ui;
-    
+    color: rgb(225, 51, 68);
+    text-shadow: -1px 5px #fdd006;    
     
 }
 
@@ -25,13 +27,14 @@ h4{
     font-size: 1.5rem;
     margin: 2rem;
     animation: scaleXAnimation 3s infinite ease-in-out;
+    text-align: center;
 }
 @keyframes scaleXAnimation {
     0% {
         transform: scaleX(1); /* Normal scale */
     }
     50% {
-        transform: scaleX(1.5); /* Scale in positive x direction */
+        transform: scaleX(1.3); /* Scale in positive x direction */
     }
     
     100% {
@@ -51,7 +54,7 @@ h4{
 
 .top{
     width: 90%;
-    height: 20%;
+     
     flex: 0 0 20%;
     display: flex;
     align-items: center;
@@ -194,6 +197,9 @@ h4{
 .age-div{
     width: 100%;
     height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     /* border: 1px solid; */
     
 }
@@ -220,4 +226,49 @@ h4{
     font-weight: 600;
     color: red;
     text-wrap: wrap;
+    text-align: center;
+}
+
+@media screen and (max-width:550px) {
+    .top{
+        flex: 0 0 25%;
+        height: 30%;
+        flex-direction: column;
+        gap: 0.5rem;
+        padding: 0 1rem;
+    }
+
+    .dob-box{
+        flex:0 0 50%;
+        font-size: 0.8rem;
+        width: 99%;
+
+    }
+
+    .bottom {
+        flex: 0 0 75%;
+        flex-direction: column-reverse;
+        gap: 2.5rem;
+    }
+
+    
+    .age-div p{
+        display: inline;
+        border-bottom: 2px solid black;
+        font-size: 15px;
+    }
+    .age-div p span{
+        font-size: 30px;
+    }
+
+    .message{
+        font-size: 1rem;
+        /* font-weight: ; */
+    }
+
+    h4{
+        font-size: 1rem;
+        margin: 5rem;
+    }
+    
 }
