--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ h4{
     text-align: center;
 }
 
+/* media query added */
 @media screen and (max-width:550px) {
     .top{
         flex: 0 0 25%;
